Fixed status page tiles not being aligned to top

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -97,6 +97,7 @@
 	width: 25%;
 	padding: 0% 4%;
 	display: inline-block;
+	vertical-align: top;
 
 	.image-container
 	{
